@@ -35,7 +35,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.regex.Pattern;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.client.solrj.SolrClient;
@@ -92,15 +91,6 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
   private static CloudSolrClient httpBasedCloudSolrClient = null;
   private static CloudSolrClient zkBasedCloudSolrClient = null;
-
-  private static final Pattern PATTERN_WITH_COLLECTION =
-      Pattern.compile(
-          "path=/admin/collections.*params=\\{[^}]*action=CLUSTERSTATUS"
-              + "[^}]*collection=[^&}]+[^}]*\\}");
-  private static final Pattern PATTERN_WITHOUT_COLLECTION =
-      Pattern.compile(
-          "path=/admin/collections.*params=\\{[^}]*action=CLUSTERSTATUS"
-              + "(?![^}]*collection=)[^}]*\\}");
 
   @BeforeClass
   public static void setupCluster() throws Exception {
@@ -269,29 +259,40 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
         .process(cluster.getSolrClient());
     cluster.waitForActiveCollection(collectionName, 2, 2);
 
-    try (LogListener entireClusterStateLogs =
-            LogListener.info(HttpSolrCall.class).regex(PATTERN_WITHOUT_COLLECTION);
-        LogListener collectionClusterStateLogs =
-            LogListener.info(HttpSolrCall.class).regex(PATTERN_WITH_COLLECTION);
-        LogListener adminRequestLogs = LogListener.info(HttpSolrCall.class).substring("[admin]");
+    try (LogListener adminLogs = LogListener.info(HttpSolrCall.class).substring("[admin]");
         CloudSolrClient solrClient = createHttpCSPBasedCloudSolrClient(); ) {
+
+      assertEquals(1, adminLogs.getCount());
+      assertTrue(
+          adminLogs
+              .pollMessage()
+              .contains(
+                  "path=/admin/collections params={prs=true&liveNodes=true&action"
+                      + "=CLUSTERSTATUS&includeAll=false"));
+
       SolrInputDocument doc = new SolrInputDocument("id", "1", "title_s", "my doc");
       solrClient.add(collectionName, doc);
+
+      // getCount seems to return a cumulative count, but add() results in only 1 additional admin
+      // request to fetch CLUSTERSTATUS for the collection
+      assertEquals(2, adminLogs.getCount());
+      assertTrue(
+          adminLogs
+              .pollMessage()
+              .contains(
+                  "path=/admin/collections "
+                      + "params={prs=true&action=CLUSTERSTATUS&includeAll=false"));
+
       solrClient.commit(collectionName);
+      // No additional admin requests sent
+      assertEquals(2, adminLogs.getCount());
+
       for (int i = 0; i < 3; i++) {
         assertEquals(
             1, solrClient.query(collectionName, params("q", "*:*")).getResults().getNumFound());
+        // No additional admin requests sent
+        assertEquals(2, adminLogs.getCount());
       }
-
-      // 1 call to fetch entire cluster state via BaseHttpCSP.fetchLiveNodes()
-      // 1 call to fetch CLUSTERSTATUS for collection via getDocCollection() (first collection
-      // lookup)
-      assertLogCount(adminRequestLogs, 2);
-      // 1 call to fetch CLUSTERSTATUS for collection via getDocCollection() (first collection
-      // lookup)
-      assertLogCount(collectionClusterStateLogs, 1);
-      // 1 call to fetch entire cluster state from HttpCSP.fetchLiveNodes()
-      assertLogCount(entireClusterStateLogs, 1);
     }
   }
 
@@ -299,16 +300,6 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     final List<String> solrUrls = new ArrayList<>();
     solrUrls.add(cluster.getJettySolrRunner(0).getBaseUrl().toString());
     return new CloudHttp2SolrClient.Builder(solrUrls).build();
-  }
-
-  private void assertLogCount(LogListener logListener, int expectedCount) {
-    int logCount = logListener.getCount();
-    assertEquals(expectedCount, logCount);
-    if (logCount > 0) {
-      for (int i = 0; i < logCount; i++) {
-        logListener.pollMessage();
-      }
-    }
   }
 
   @Test
